# cAGENTS

./: .clippy.toml  .gitignore  ADVANCED.md  CHANGELOG.md  COMMANDS.md  Cargo.toml  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  research_prompt_progressive_disclosure_api.md
.beads/: cagents.db  issues.jsonl
.cAGENTS/: .gitignore  config.toml
.cAGENTS/templates/: agents-from-agentsmd.md  agents-from-claudemd.md  agentsmd-intro.md  claudemd-intro.md  rust-tests.md  shared-root.md
.changeset/: anonymous-telemetry-tracking.md  arbitrary-variables-in-when.md  cagents-usage-footer.md  clear-beers-agree.md  clever-meals-smash.md  config.json  famous-rivers-vanish.md  fix-binary-platform-support.md  fix-nested-migration-merge-mode.md  fix-output-cleanup.md  lucky-rice-try.md  nested-import-all-types.md  output-in-field.md  recursive-cursor-import.md  remove-always-apply.md  remove-legacy-cli-flags.md  remove-simplify-globs-to-parent.md  salty-moose-remain.md  shy-ravens-knock.md  simplified-readme.md  upset-waves-agree.md  version-reset-to-0-4-0.md
.github/workflows/: README.md  canary.yml  ci.yml  release.yml
crates/cagents-cli/: Cargo.toml
crates/cagents-cli/src/: main.rs
crates/cagents-cli/tests/: build_smoke.rs  context_command.rs  preview_targets.rs  render_command.rs
crates/cagents-cli/tests/snapshots/: build_smoke__build_creates_agents_md.snap
crates/cagents-core/: Cargo.toml
crates/cagents-core/src/: config.rs  import.rs  init.rs  interactive.rs  lib.rs  lint.rs  loader.rs  merge.rs  model.rs  planner.rs  render.rs
crates/cagents-core/src/adapters/: builtin.rs  command.rs  handlebars.rs  liquid.rs  mod.rs  tera.rs
crates/cagents-core/src/helpers/: git.rs  setup.rs
crates/cagents-core/src/import/: helpers.rs
crates/cagents-core/src/writers/: agents_md.rs  claude_md.rs  cursor_mdc.rs  cursorrules.rs  mod.rs
crates/cagents-core/tests/: build_byob.rs  builtin_engine.rs  cagents_footer.rs  cleanup_output_targets.rs  command_vars.rs  config_load.rs  cross_platform.rs  discover_rules.rs  exhaustive_globs.rs  exhaustive_scenarios.rs  exhaustive_templates.rs  exhaustive_variables.rs  footer_root_only.rs  git_multi_output.rs  gitignore_support.rs  glob_simplification.rs  import_export.rs  import_multiple_nested.rs  import_preserves_nested_structure.rs  import_special_chars.rs  init_basic.rs  init_detection.rs  init_glob_fix.rs  init_minimal.rs  lint_validation.rs  linting.rs  migration.rs  nested_agents_import.rs  nested_claude_import.rs  nested_cursorrules_import.rs  nested_detection.rs  no_changelog_references.rs  output_headers.rs  output_in_field.rs  output_targets.rs  preview_build_parity.rs  recursive_import.rs  render_hbs.rs  render_liquid_tera.rs  target_filtering.rs
crates/cagents-core/tests/test_utils/: README.md  mod.rs
crates/cagents-telemetry/: Cargo.toml
crates/cagents-telemetry/src/: client.rs  config.rs  events.rs  lib.rs  llm_detection.rs  machine_id.rs  transport.rs
crates/cagents-telemetry/tests/: integration_tests.rs
docs/: TELEMETRY.md  TESTING.md  telemetry-config-schema.md
docs/rfcs/: README.md
docs/rfcs/docs/rfcs/: 0000-template.md  0001-claude-skills-support.md  0002-progressive-disclosure.md  0003-multi-format-consistency.md  0004-cli-enhancements.md
examples/basic/: README.md
examples/basic/.cAGENTS/: .output-cache  config.local.toml  config.toml
examples/basic/.cAGENTS/templates/: backend-rust.hbs.md  project-meta.hbs.md  rust-specific.hbs.md  typescript.hbs.md
examples/basic/.cAGENTS/tools/: render.py
examples/basic/docs/system-design/: models.md
examples/basic/src/: main.rs
scripts/: build-binary.js  sync-versions.js
