[package]
name = "cagents"
version.workspace = true
edition = "2021"
description = "CLI for cAGENTS - Adaptable instruction for codegen models with composable templates"
license = "MIT"
repository = "https://github.com/centralinc/cagents"
homepage = "https://github.com/centralinc/cagents"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
cagents-core = { path = "../cagents-core" }
cagents-telemetry = { path = "../cagents-telemetry" }
tokio = { version = "1", features = ["rt", "macros"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
serde_json = "1"
