[package]
name = "cagents-core"
version.workspace = true
edition = "2021"
description = "Core library for cAGENTS - Adaptable instruction for codegen models with composable templates"
license = "MIT"
repository = "https://github.com/centralinc/cagents"
homepage = "https://github.com/centralinc/cagents"
publish = false

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
globset = "0.4"
ignore = "0.4"
walkdir = "2"
thiserror = "1"
camino = "1"
dirs = "5"
inquire = "0.7"
owo-colors = "4"
comfy-table = "7"

[dev-dependencies]
assert_fs = "1"
predicates = "3"
tempfile = "3"
insta = { version = "1", features = ["yaml"] }
serde_json = "1"
serial_test = "3"
