[package]
name = "cagents-telemetry"
version.workspace = true
edition = "2021"
description = "Privacy-first telemetry for cAGENTS CLI"
license = "MIT"
repository = "https://github.com/centralinc/cagents"
homepage = "https://github.com/centralinc/cagents"
publish = false

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["sync", "time", "rt"] }

# Mixpanel client
mixpanel-rs = "0.3"
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Hashing and crypto
sha2 = "0.10"
uuid = { version = "1.11", features = ["v4", "serde"] }

# System info
mac_address = "1.1"
hostname = "0.4"
sysinfo = "0.33"

# File system and paths
dirs = "5.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.14"
serial_test = "3.2"
